# CKTextEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.cpp  pch.h  res.qrc  test.ckt
auto_api_templates/: 有道翻译.ini  百度翻译.ini
control/: char_draw.cpp  char_draw.h  propertywidget.cpp  propertywidget.h  text_edit.cpp  text_edit.h  text_tablewidget.cpp  text_tablewidget.h
dialog/: dlg_about.cpp  dlg_about.h  dlg_about.ui  dlg_attr.cpp  dlg_attr.h  dlg_attr.ui  dlg_auto.cpp  dlg_auto.h  dlg_auto.ui  dlg_auto_help.cpp  dlg_auto_help.h  dlg_auto_help.ui  dlg_decide.cpp  dlg_decide.h  dlg_decide.ui  dlg_decide_kick.cpp  dlg_decide_kick.h  dlg_decide_kick.ui  dlg_edit.cpp  dlg_edit.h  dlg_edit.ui  dlg_find.cpp  dlg_find.h  dlg_find.ui  dlg_group_manage.cpp  dlg_group_manage.h  dlg_group_manage.ui  dlg_replace.cpp  dlg_replace.h  dlg_replace.ui  dlg_transform.cpp  dlg_transform.h  dlg_transform.ui
plugin/: CMakeLists.txt  plugin.h
plugin/import/: CMakeLists.txt  dlg_im_ts.cpp  dlg_im_ts.h  dlg_im_ts.ui  im_tiberian_sun.cpp
test/: test.ckt
translations/: cktexteditor_en_us.ts
